<resources>
    <string name="app_name">FoodFuzz</string>
    <string name="food_fuzz_logo">Food Fuzz Logo</string>
    <string name="powered_by_otema">Powered By Otema Technologies</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Full Name</string>
    <string name="already_a_member_login">Already a member? Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Sign Up</string>
    <string name="no_account_yet_create_one">No account yet? Sign Up</string>
    <string name="tel_no">Telephone number</string>
    <string name="skip">Skip</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="food">Food</string>
    <string name="drinks"> Soft Drinks</string>
    <string name="alcohol"> Alcoholic Drinks</string>
    <string name="restaurant">Restaurants</string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="ksh_000_00">0.00</string>
    <string name="title">Title</string>
    <string name="log_out">Log out</string>
    <string name="my_saved_items">My saved Items</string>
    <string name="my_cart">My cart</string>
    <string name="orders">Orders</string>
    <string name="browse_by">Browse by:</string>
    <string name="check_out">Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="cart_successfully_updated">Cart successfully updated</string>
    <string name="seller">Seller</string>
    <string name="one">1</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="ksh">KSH </string>
    <string name="item">Item</string>
    <string name="cost">Cost In KSH</string>
    <string name="quantity">Quantity</string>
    <string name="total_ksh"> TOTAL FEE: KSH</string>
    <string name="subtotal_ksh">SUB TOTAL: KSH</string>
    <string name="delivery_ksh">DELIVERY</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="_0_00">0.00</string>
    <string name="hint">xxCC10000X</string>
    <string name="finish">Finish</string>
    <string name="instructions">Please make payment to 0706793153 then paste the confirmation code bellow to confirm payment. Note that delivery will not be made until payment has been received.</string>
    <string name="deliveryloc">Enter your preferred delivery location</string>
    <string name="currentLoc">Use My current location for delivery </string>
    <string name="chose_delivery_zone">Chose delivery zone</string>
    <string name="slide">Order from the comfort of your house</string>
    <string name="slide1">Sweet and healthy drinks</string>
    <string name="slide2">Easy and flexible payment modes: pay on delivery, mpesa, airtel money etc</string>
    <string name="slide3">Delicious meals of your liking</string>
    <string name="slide4">Fast and efficient delivery</string>
    <string name="proceed_to_market">Proceed to market</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back_home">Go back home</string>
    <string name="submit">Submit</string>
    <string name="dash">_ _</string>
    <string name="mode_of_payment">Mode of payment</string>
    <string name="mpesa_on_delivery">Mpesa On Delivery</string>
    <string name="mpesa">Mpesa</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string-array name="payment_mode">
        <item>Cash On delivery</item>
        <item>Mpesa On Delivery</item>
    </string-array>
</resources>
