<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reset_pwd"
            android:icon="@drawable/ic_lock"
            android:title="@string/reset_password" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_saved_items" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/orders" />
    </group>

    <item android:title="@string/browse_by">
        <menu>
            <item
                android:id="@+id/nav_drink"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drinks" />
            <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/food" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/food" />
        </menu>
    </item>

</menu>
