<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/food" />
            <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/cost"
            android:text="@string/title"
            />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksh_000_00"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/addToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/btnRed"
        android:drawableEnd="@drawable/ic_add_shopping_cart"
        android:drawableRight="@drawable/ic_add_shopping_cart"
        android:textColor="@color/colorAccent"
        android:text="@string/add_to_cart"/>


</androidx.constraintlayout.ConstraintLayout>