<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/foodfuzzlogo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/food_fuzz_logo" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/skip"
            android:textColor="@color/colorAccent" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="johndoe@gmail.com"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_email_24dp"
                android:drawablePadding="18dp"
                android:textColor="@color/colorAccent"
                android:drawableStart="@drawable/ic_email_24dp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="18dp"
                android:drawableStart="@drawable/ic_lock"
                android:textColor="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:background="@drawable/rounded_dark_button"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/link_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/no_account_yet_create_one"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
</ScrollView>