<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_small"
    card_view:cardCornerRadius="@dimen/margin_xsmall"
    card_view:cardElevation="@dimen/margin_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/cost"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:maxLines="3"
            android:padding="@dimen/margin_xsmall"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ksh_000_00"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            card_view:layout_constraintBottom_toTopOf="@+id/seller"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            card_view:layout_constraintTop_toBottomOf="@+id/cost"
            card_view:layout_constraintBottom_toTopOf="@+id/quantity"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            card_view:layout_constraintTop_toBottomOf="@+id/seller"
            card_view:layout_constraintBottom_toTopOf="@+id/addCart"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/addCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@+id/cost"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:text="@string/remove_from_cart"
            android:textColor="@color/colorAccent"
            android:background="@drawable/rounded_dark_button"
            android:drawablePadding="@dimen/margin_small" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
