<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/foodfuzzlogo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/food_fuzz_logo" />

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:autofillHints="John Doe"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="18dp"
                android:drawableStart="@drawable/ic_person" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="johndoe@gmail.com"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_email_24dp"
                android:drawablePadding="18dp"
                android:drawableStart="@drawable/ic_email_24dp" />
            />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/tel_no"
                android:autofillHints="+2547000000"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_contact_phone"
                android:drawablePadding="18dp"
                android:drawableStart="@drawable/ic_contact_phone" />
            />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="18dp"
                android:drawableStart="@drawable/ic_lock" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="18dp"
                android:drawableStart="@drawable/ic_lock" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account"
            android:background="@color/btnRed"
            android:drawableRight="@drawable/ic_person_add"
            android:textColor="@color/colorAccent"
            android:drawableEnd="@drawable/ic_person_add" />

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
</ScrollView>