<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_xsmall"
    card_view:cardCornerRadius="@dimen/margin_xsmall"
    card_view:cardElevation="@dimen/margin_small">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="@dimen/margin_xsmall"
            android:src="@drawable/foodfuzzlogo"
            tools:scaleType="fitXY"
            android:contentDescription="@string/food_fuzz_logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:layout_below="@+id/image"
            android:maxLines="3"
            android:padding="@dimen/margin_xsmall"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ksh_000_00"
            android:layout_below="@+id/name"
            android:padding="@dimen/margin_xsmall"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="serif"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
