<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/colorPrimary">

        <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view_cart"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"/>

    <Button
        android:id="@+id/view_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out"
        app:layout_constraintBottom_toBottomOf="@+id/continue_shopping"
        app:layout_constraintEnd_toStartOf="@+id/continue_shopping"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:background="@drawable/rounded_dark_button"
        android:textColor="@color/primary_darker"/>

    <Button
        android:id="@+id/continue_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_shopping"
        app:layout_constraintBottom_toBottomOf="@+id/view_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_cart"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textColor="@color/primary_green"
        android:background="@drawable/rounded_dark_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>