<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        android:textSize="@dimen/text_md"
        android:ems="14"
        android:textColor="@color/colorAccent"
        android:drawableLeft="@drawable/ic_email_24dp"
        android:drawablePadding="@dimen/margin_medium"
        android:textColorHint="@color/colorAccent"
        android:drawableStart="@drawable/ic_email_24dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_green_button"
        android:id="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelReset"
        android:text="@string/reset"
        android:drawableLeft="@drawable/ic_refresh_24dp"
        android:drawablePadding="@dimen/margin_medium"
        android:textColor="@color/colorAccent"
        android:drawableStart="@drawable/ic_refresh_24dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelReset"
        android:background="@drawable/rounded_red_button"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:drawableLeft="@drawable/ic_cancel_24dp"
        android:drawablePadding="@dimen/margin_medium"
        android:drawableStart="@drawable/ic_cancel_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>